components/nodejs-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-k8s
  namespace: nodejs
  labels:
    app: nodejs-k8s
spec:
  type: ClusterIP
  selector:
    app: nodejs-k8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
