components/nodejs-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-k8s
  namespace: nodejs
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: nodejs-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-k8s
            port:
              number: 80  
  tls:
  - hosts:
    - nodejs-k8s.local
    secretName: nodejs-k8s-tls-secret
